[package]
name = "hickory_bunker"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-proto = "0.24"
hickory-server = "0.24"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
rocksdb = "0.22"
bincode = "1"
tokio = { version = "1", features = ["full", "net"] }
parking_lot = "0.12"
anyhow = "1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
